--- a/main.css
+++ b/main.css
@@ -1,14 +1,16 @@
 * {
     box-sizing: border-box;
+    
   }
   
   body {
     font-family: "Open Sans",
     sans-serif; 
     font-size: 20px;
-    color: #444;
+    color: #010101;
     text-align: center;
     line-height: 1.5;
+    background-color: #20F4D8;
   }
   
   nav,
@@ -25,7 +27,16 @@
     z-index: 10;
   }
   
-  
+  .header {
+    font-size: 25px;
+    font-family: 'Anton', sans-serif;
+    
+  }
+
+  .sub-headlines {
+    font-size: 25px;
+    font-family: 'Anton', sans-serif;
+  }
   
   header {
     padding: 12% 0;
@@ -46,11 +57,15 @@
   .bio {
 
     margin: 20px;
+    font: 16px arial, sans-serif;
+    line-height: 24px;
   }
 
   .app-description {
 
     margin: 20px;
+    font: 16px arial, sans-serif;
+    line-height: 24px;
 
   }
   
