--- a/main.css
+++ b/main.css
@@ -33,8 +33,14 @@
     
   }
 
-  .sub-headlines {
-    font-size: 25px;
+  .sub-headline1 {
+    font-size: 30px;
+    font-family: 'Anton', sans-serif;
+  }
+
+  .sub-headline2 {
+
+    font-size: 20px;
     font-family: 'Anton', sans-serif;
   }
   
@@ -59,6 +65,7 @@
     margin: 20px;
     font: 16px arial, sans-serif;
     line-height: 24px;
+    text-align: left;
   }
 
   .app-description {
@@ -66,6 +73,8 @@
     margin: 20px;
     font: 16px arial, sans-serif;
     line-height: 24px;
+    text-align: left;
+
 
   }
   
