--- a/main.css
+++ b/main.css
@@ -87,4 +87,9 @@
   section:nth-child(even) {
     background-color: #ddd;
   }
+
+  .navigation {
+    text-align: left;
+    padding-left: 15px;
+  }
   
